# eclipse-oracles

./: Anchor.toml
programs/poc-oracles/: Cargo.toml
programs/poc-oracles/src/: lib.rs
tests/: poc-oracles.ts
