[package]
name = "poc-oracles"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "poc_oracles"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
pyth-solana-receiver-sdk = "0.3.1"
switchboard-on-demand = "0.1.15"
rust_decimal = { version = "1.17", features = ["maths"] }
rust_decimal_macros = "1.17"
bytemuck = "1.16.3"
